# esp32

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/api_components/: .cproject  .project  CMakeLists.txt  api_components.c
components/api_components/include/: api_components.h
components/gpio_components/: .cproject  .project  CMakeLists.txt  gpio_components.c
components/gpio_components/include/: gpio_components.h
components/mqtt_components/: .cproject  .project  CMakeLists.txt  mqtt_components.c
components/mqtt_components/include/: mqtt_components.h
components/nvs_components/: CMakeLists.txt  nvs_components.c
components/nvs_components/include/: nvs_components.h
components/ota_components/: .cproject  .project  CMakeLists.txt  ota_components.c
components/ota_components/include/: ota_components.h
components/wifi_components/: .cproject  .project  CMakeLists.txt  wifi_components.c
components/wifi_components/include/: wifi_components.h
html/: index.html
main/: .cproject  main.c  main.h
